--- a/events/calculator/index.html
+++ b/events/calculator/index.html
@@ -12,7 +12,7 @@
         <input type="text" id="input">
         <button class="btn opperation">+</button>
         <button class="btn opperation">-</button>
-        <button class="btn opperation">X</button>
+        <button class="btn opperation">*</button>
         <button class="btn opperation">/</button>
         <button class="btn">7</button>
         <button class="btn">8</button>
@@ -30,4 +30,4 @@
     </div>
     <script src="index.js"></script>
 </body>
-</htm
+</html>
