--- a/firebase/database/index.html
+++ b/firebase/database/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
-<script src="../config/index.js"></script>
-</head>
-<body>
-    <h1>Firebase Database</h1>
-    
-    <input type="text" placeholder="Add text" id="name">
-    <button>Add</button>
-    <script src="./index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real Time Database</title>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+    <script src="../config/index.js"></script>
+  </head>
+  <body>
+      <input  type="text" placeholder="Enter some text"   >
+      <button id="addbtn">Add Text</button>
+      <script src="./index.js"></script>
+  </body>
 </html>
