--- a/chatApp_with_firebase/index.html
+++ b/chatApp_with_firebase/index.html
@@ -9,10 +9,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
 </head>
-<body onload="getUsers();">
-    <div id="container">
-      
-    </div>
+<body onload="dashboardAuth();getUsers();">
+    <div id="container"></div>
 
     <script src="index.js"></script>
 </body>
